# jcode

./: Cargo.toml  codemagic.yaml
.github/scripts/: run_with_timeout.py
.github/workflows/: build-linux-amd64.yml  ci.yml  release.yml  windows-smoke.yml
assets/demos/: duck_fast-on-mid-stream_autoedit_timeline.json  duck_fast-on-mid-stream_autoedit_v2_timeline.json  duck_fast-on-mid-stream_autoedit_v2_trimmed_timeline.json  edited_timeline.json  wolf_timeline.json
crates/jcode-azure-auth/: Cargo.toml
crates/jcode-build-support/src/: paths.rs
crates/jcode-compaction-core/src/: lib.rs
crates/jcode-desktop/src/: session_launch.rs
crates/jcode-embedding/: Cargo.toml
crates/jcode-mobile-core/: Cargo.toml
crates/jcode-mobile-core/src/: lib.rs  lib_tests.rs  visual.rs
crates/jcode-mobile-sim/src/: lib.rs  lib_tests.rs
crates/jcode-notify-email/: Cargo.toml
crates/jcode-overnight-core/src/: lib.rs
crates/jcode-provider-core/: Cargo.toml
crates/jcode-provider-core/src/: catalog_refresh.rs
crates/jcode-tui-markdown/src/: lib.rs  markdown_render_full.rs  markdown_render_lazy.rs
docs/: AGENT_NATIVE_VCS_CORE_BEHAVIOR.md  AMBIENT_MODE.md  CODE_QUALITY_TODO.md  DESKTOP_APP_ARCHITECTURE.md  DESKTOP_FIRST_PROTOTYPE.md  DESKTOP_SINGLE_SESSION_DESIGN.md  DESKTOP_SUPERAPP_WORKSPACE.md  IOS_CLIENT.md  MOBILE_AGENT_SIMULATOR.md  MOBILE_IOS_HOST_INTEGRATION.md  MOBILE_SWIFT_AUDIT.md  MULTI_SESSION_CLIENT_ARCHITECTURE.md  SAFETY_SYSTEM.md  SOFT_INTERRUPT.md  TERMINAL_BENCH.md  WINDOWS.md  WRAPPERS.md  reddit_dashboard.py
ios/: ExportOptions.plist  FUTURE_OWNERSHIP_BACKLOG.md  Package.swift
ios/Sources/JCodeKit/: Connection.swift  JCodeKit.swift  Networking.swift  SessionManager.swift
ios/Sources/JCodeMobile/: JCodeMobileApp.swift
ios/Tests/JCodeKitTests/: ClientTests.swift  main.swift
mockups/jcode-mobile/: README.md  index.html
packaging/linux/: jcode-desktop.desktop
scripts/: cargo_exec.sh  mobile_simulator_smoke.sh  panic_budget.json  security_preflight.sh
src/: agent.rs  browser.rs  compaction.rs  compaction_tests.rs  lib.rs  memory.rs  overnight.rs  setup_hints.rs  side_panel_tests.rs  telemetry.rs  update.rs
src/agent/: environment.rs
src/cli/: dispatch.rs  dispatch_tests.rs  login.rs
src/cli/args/: tests.rs
src/cli/login/: scriptable.rs
src/protocol_tests/: core_events.rs
src/provider/: copilot.rs  jcode.rs  openrouter.rs  openrouter_provider_impl.rs  openrouter_sse_stream.rs
src/server/: background_tasks.rs  comm_control.rs  reload_recovery.rs
src/tool/: apply_patch.rs  mod.rs  read.rs  skill.rs
src/tui/: info_widget.rs  info_widget_model.rs  ui_frame_metrics.rs  ui_pinned.rs  ui_pinned_layout.rs  ui_pinned_tests.rs
src/tui/app/: auth.rs  auth_account_commands.rs  local.rs  model_context.rs  navigation.rs  remote_notifications.rs
src/tui/app/inline_interactive/: openers.rs
src/tui/app/remote/: reconnect.rs
src/tui/app/tests/: remote_events_reload_04.rs
src/tui/app/tests/scroll_copy_01/: part_01.rs
src/usage/: tests.rs
telemetry-worker/: package.json  schema.sql
telemetry-worker/migrations/: 0001_expand_events.sql  0002_transport_metrics.sql  0006_token_usage.sql  0008_agent_time_and_churn.sql  0009_feedback_text.sql
