[package]
name = "jcode"
version = "0.12.0"
description = "Possibly the greatest coding agent ever built — blazing-fast TUI, multi-model, swarm coordination, 30+ tools"
edition = "2024"
autobins = false

[workspace]
members = [
    ".",
    "crates/jcode-agent-runtime",
    "crates/jcode-ambient-types",
    "crates/jcode-auth-types",
    "crates/jcode-embedding",
    "crates/jcode-gateway-types",
    "crates/jcode-import-core",
    "crates/jcode-pdf",
    "crates/jcode-background-types",
    "crates/jcode-batch-types",
    "crates/jcode-build-support",
    "crates/jcode-compaction-core",
    "crates/jcode-config-types",
    "crates/jcode-core",
    "crates/jcode-memory-types",
    "crates/jcode-message-types",
    "crates/jcode-overnight-core",
    "crates/jcode-plan",
    "crates/jcode-swarm-core",
    "crates/jcode-protocol",
    "crates/jcode-selfdev-types",
    "crates/jcode-session-types",
    "crates/jcode-storage",
    "crates/jcode-side-panel-types",
    "crates/jcode-azure-auth",
    "crates/jcode-notify-email",
    "crates/jcode-provider-metadata",
    "crates/jcode-provider-core",
    "crates/jcode-provider-openrouter",
    "crates/jcode-provider-openai",
    "crates/jcode-provider-gemini",
    "crates/jcode-tui-markdown",
    "crates/jcode-tui-messages",
    "crates/jcode-usage-types",
    "crates/jcode-tui-core",
    "crates/jcode-tui-mermaid",
    "crates/jcode-task-types",
    "crates/jcode-tool-core",
    "crates/jcode-tool-types",
    "crates/jcode-tui-account-picker",
    "crates/jcode-tui-render",
    "crates/jcode-tui-session-picker",
    "crates/jcode-tui-style",
    "crates/jcode-tui-tool-display",
    "crates/jcode-tui-usage-overlay",
    "crates/jcode-update-core",
    "crates/jcode-terminal-launch",
    "crates/jcode-tui-workspace",
    "crates/jcode-mobile-core",
    "crates/jcode-mobile-sim",
    "crates/jcode-desktop",
]

[lib]
name = "jcode"
path = "src/lib.rs"

[[bin]]
name = "jcode"
path = "src/main.rs"

[[bin]]
name = "test_api"
path = "src/bin/test_api.rs"

[[bin]]
name = "jcode-harness"
path = "src/bin/harness.rs"

[[bin]]
name = "session_memory_bench"
path = "src/bin/session_memory_bench.rs"
required-features = ["dev-bins"]

[[bin]]
name = "mermaid_side_panel_probe"
path = "src/bin/mermaid_side_panel_probe.rs"
required-features = ["dev-bins"]

[[bin]]
name = "tui_bench"
path = "src/bin/tui_bench.rs"
required-features = ["dev-bins"]

[dependencies]
# Memory allocator (reduces fragmentation for long-running server)
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"], optional = true }
tikv-jemalloc-ctl = { version = "0.6", optional = true }
tikv-jemalloc-sys = { version = "0.6", optional = true }

# Async runtime
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "blocking", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-native-roots"] }

[target.'cfg(windows)'.dependencies]
native-tls = "0.2"
hyper-tls = "0.6"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[target.'cfg(target_os = "macos")'.dependencies]
global-hotkey = "0.7"

[profile.release]
opt-level = 1
debug = 0
codegen-units = 256
incremental = true

[profile.selfdev]
inherits = "release"
opt-level = 0

# Full LTO release for stable/distribution builds
[profile.release-lto]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = false

[profile.dev]
debug = 0
incremental = true

[profile.dev.package."*"]
opt-level = 0

[profile.test]
debug = 0
incremental = true
codegen-units = 256

[dev-dependencies]
async-stream = "0.3"

[build-dependencies]
