[package]
name = "jcode-azure-auth"
version = "0.1.0"
edition = "2024"

[lib]
name = "jcode_azure_auth"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
azure_core = { version = "0.24", default-features = false, features = ["reqwest_rustls"] }
azure_identity = { version = "0.24", default-features = false, features = ["reqwest_rustls"] }
