[package]
name = "jcode-notify-email"
version = "0.1.0"
edition = "2024"

[lib]
name = "jcode_notify_email"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
imap = { version = "3.0.0-alpha.15", default-features = false, features = ["rustls-native-tls"], optional = true }

[target.'cfg(windows)'.dependencies]
native-tls = "0.2"

[features]
default = []
jcode-notify-email = ["dep:imap"]
